[INJICERT-1193] [INJICERT-1207] Update status-search to remove ledger dependency (#441)
* [INJICERT-1173] Decoupled ledger from credential status

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

rebase complete#

* [INJICERT-1173] Add unit tests for certifyIssuance and credentialStatusService
Rebase complete

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1207] Remove credentialId from updateStatus search criteria

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1207] Update CredentialStatusServiceImpl unit tests

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1193] Update issuance and expiration date type in ledger

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1217] Fix for ledger search when credentialId is empty

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* Remove ledger dependency from update status

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1193] Add upgrade db-scripts

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1193] Add v2 apis for ledger search and status update

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1193] Fix unit tests for update status changes

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1193] Add new update status request v2 dto

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1193] Resolve review comments

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

---------

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>
Signed-off-by: jackjain <jackjain1995@gmail.com>